// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContactPersonNameField> - selects item with keystrokes 1`] = `
LoadedCheerio {
  "0": <section
    required=""
  >
    <div
      class="euiFormRow euiFormRow--fullWidth"
      id="uniforms-000h-0000-row"
    >
      <div
        class="euiFormRow__labelWrapper"
      >
        <label
          class="euiFormLabel euiFormRow__label"
          for="uniforms-000h-0000"
          id="uniforms-000h-0000-label"
        />
         
        <div
          class="euiText euiText--medium"
        />
      </div>
      <div
        class="euiFormRow__fieldWrapper"
      >
        <div
          class="euiFormControlLayout euiFormControlLayout--fullWidth"
        >
          <div
            class="euiFormControlLayout__childrenWrapper"
          >
            <input
              autocomplete="off"
              class="euiFieldText euiFieldText--fullWidth"
              id="uniforms-000h-0000"
              name="x"
              placeholder="Search and add contact persons..."
              type="text"
              value="n"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="autocomplete-container"
    >
      <section
        class="autocomplete "
      >
        <table
          class="result"
        >
          <tbody>
            <tr
              class=""
            >
              <td>
                <span>
                  <span
                    class="matched"
                  >
                    n
                  </span>
                  ame
                </span>
              </td>
              <td>
                a@b.nl
              </td>
            </tr>
          </tbody>
        </table>
      </section>
    </div>
  </section>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`<ContactPersonNameField> - selects item with keystrokes 2`] = `
LoadedCheerio {
  "0": <section
    required=""
  >
    <div
      class="euiFormRow euiFormRow--fullWidth"
      id="uniforms-000h-0000-row"
    >
      <div
        class="euiFormRow__labelWrapper"
      >
        <label
          class="euiFormLabel euiFormRow__label"
          for="uniforms-000h-0000"
          id="uniforms-000h-0000-label"
        />
         
        <div
          class="euiText euiText--medium"
        />
      </div>
      <div
        class="euiFormRow__fieldWrapper"
      >
        <div
          class="euiFormControlLayout euiFormControlLayout--fullWidth"
        >
          <div
            class="euiFormControlLayout__childrenWrapper"
          >
            <input
              autocomplete="off"
              class="euiFieldText euiFieldText--fullWidth"
              id="uniforms-000h-0000"
              name="x"
              placeholder="Search and add contact persons..."
              type="text"
              value="n"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="autocomplete-container"
    />
  </section>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
